# smart-paste

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  package.json
scripts/: build-static.mjs  dev-server.mjs
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/src/: main.rs
src-tauri/src/clipboard/: manager.rs  mod.rs  reader.rs  storage.rs  types.rs
src-tauri/src/commands/: history.rs  mod.rs  window.rs
src-tauri/src/state/: app.rs  mod.rs  overlay.rs
